--- a/app/docs/javascript/basic/page.mdx
+++ b/app/docs/javascript/basic/page.mdx
@@ -1,3 +1,5 @@
+# JavaScript Basic Interview Questions
+
 ## 1. What is the difference between `let`, `const`, and `var`?
 
 - `var` is function-scoped and can be re-declared.
@@ -21,8 +23,6 @@ function example() {
   console.log(c); // 3
 }
 ```
-
- 
 
 ---
 
@@ -162,4 +162,3 @@ const promise = new Promise((resolve, reject) => {
 
 promise.then((res) => console.log(res)); // Success
 ```
- 
