feat(ques): added html some question with answer

--- a/app/docs/html_css/basic/page.mdx
+++ b/app/docs/html_css/basic/page.mdx
@@ -2,7 +2,7 @@
 
 ## 1. What is HTML?
 
-**HTML** stands for **HyperText Markup Language**. It is used to structure the content on the web.
+**HTML** stands for **HyperText Markup Language**. It is a standard text formatting language used for developing web pages released in 1993.
 
 ```html
 <!DOCTYPE html>
@@ -138,3 +138,17 @@ Use the `<table>`, `<tr>`, `<th>`, and `<td>` tags.
   </tr>
 </table>
 ```
+---
+
+## 11. What are void elements in HTML?
+
+**HTML** elements which do not have **closing** tags or do not need to be closed are Void elements.
+
+```html 
+<br /> 
+<img />
+<hr />
+```
+---
+
+## 12. 
